--- a/scripts/nginx-sncrm.conf
+++ b/scripts/nginx-sncrm.conf
@@ -15,6 +15,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CVE-2025-29927 漏洞修复：移除可能被恶意利用的x-middleware-subrequest头
+        proxy_set_header x-middleware-subrequest "";
     }
 
     # 处理Next.js的静态资源
